feat: права на команду nickname